# Car-Inventory-Scraper

./: .gitignore  Makefile  README.md  dealers.toml  inventory.html  pyproject.toml  scrapy.cfg
.github/agents/: new-dealer.agent.md
.github/workflows/: build-site.yml  scrape.yml
inventory/: inventory.json
scripts/: fetch_page.py
site/: eleventy.config.js  package-lock.json  package.json
site/src/_data/: inventory.js
site/src/_includes/layouts/: base.njk
site/src/pages/: compare.njk  index.njk  snapshot.njk
site/src/scripts/: chart-setup.js  compare-diff.js  compare-init.js  compare-render.js  dashboard-charts.js  snapshot-charts.js  snapshot-init.js  table-sort.js
site/src/styles/: main.css
src/car_inventory_scraper/: __init__.py  __main__.py  cli.py  handler.py  items.py  parsing_helpers.py  pipelines.py  settings.py  stealth.py
src/car_inventory_scraper/spiders/: __init__.py  dealercom.py  dealereprocess.py  dealerinspire.py  dealeron.py  dealervenom.py  teamvelocity.py
src/car_inventory_scraper/tools/: build_report.py  fetch_page.py
