[project]
name = "car-inventory-scraper"
version = "0.1.0"
description = "Scrape car dealership websites to build an inventory database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scrapy>=2.12",
    "click>=8.1",
    "cloudscraper>=1.2.71",
]

[project.scripts]
car-inventory-scraper = "car_inventory_scraper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/car_inventory_scraper"]

[tool.ruff]
line-length = 100
